--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="styles/header.css">
         <link rel="stylesheet" href="styles/video.css">
         <link rel="stylesheet" href="styles/sidebar.css">
+        <link rel="stylesheet" href="styles/mediaquery.css">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <header class="header">
